welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vu
  vu = false
  ^Program:5: error: not found: value vu
    if(estSurBiscuit()){vu = true}    
                        ^Program:11: error: not found: value vu
  return(vu)
         ^